Raw-Material component created and code added in frontend folder

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,48 +1,2 @@
-<form class="customer-registration-form" [formGroup]="registrationForm">
-
-  <div class="form-input-row">
-    <h1 style="text-align: center; font-style: oblique;">Registration Form</h1>
-  </div>
-  <div class="form-input-row">
-    <div class="form-inut-cols">
-      <label for="fullname">Customer Name</label>
-    </div>
-    <div class="form-inut-cols">
-      <input id="fullname" type="text" name="fullname" formControlName="fullname" placeholder="Enter Full name" required>
-    </div>
-  </div>
-
-  <div class="form-input-row">
-    <div class="form-inut-cols">
-      <label for="address">Address</label>
-    </div>
-    <div class="form-inut-cols">
-      <textarea id="address" name="address"rows="2" cols="20" formControlName="address" placeholder="Enter Address" required></textarea>
-    </div>
-  </div>
-
-  <div class="form-input-row">
-    <div class="form-inut-cols">
-      <label for="contactno">Contact Number</label>
-    </div>
-    <div class="form-inut-cols">
-      <input id="contactno" type="number" name="contactno" formControlName="contactno" placeholder="Enter Contact Number" required>
-    </div>
-  </div>
-
-  <div class="form-input-row">
-    <div class="form-inut-cols">
-      <label for="emailid">Email Id</label>
-    </div>
-    <div class="form-inut-cols">
-      <input id="emailid" type="email" name="emailid" formControlName="emailid" placeholder="Enter Email Id" required>
-    </div>
-  </div>
-
-  <div class="btn-parent">
-    <button (click)="onReset()">Reset</button>
-    <button (click)="onSubmit()">Submit</button>
-  </div>
-
-  <div> {{ registrationForm.value | json }}</div>
-</form>
+<app-customer-registrationform *ngIf="false"></app-customer-registrationform>
+<app-raw-material></app-raw-material>
