--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+input.ng-touched.ng-invalid {
+    border: 1px solid red;
+    box-shadow: 0 0 22px brown inset;
+   }
