--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-customer-registrationform *ngIf="false"></app-customer-registrationform>
 <app-raw-material *ngIf="false"></app-raw-material>
-<app-department></app-department>
-<app-role></app-role>
+<app-department *ngIf="false"></app-department>
+<app-role *ngIf="false"></app-role>
+<app-type></app-type>
