Table UI created

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-raw-material *ngIf="false"></app-raw-material>
 <app-department *ngIf="false"></app-department>
 <app-role *ngIf="false"></app-role>
-<app-type></app-type>
+<app-type *ngIf="false"></app-type>
+<app-table></app-table>
