--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,4 +3,5 @@
 <app-department *ngIf="false"></app-department>
 <app-role *ngIf="false"></app-role>
 <app-type *ngIf="false"></app-type>
-<app-table></app-table>
+<app-table *ngIf="false"></app-table>
+<app-address></app-address>
