--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,1 @@
-<app-customer-registrationform *ngIf="false"></app-customer-registrationform>
-<app-raw-material *ngIf="false"></app-raw-material>
-<app-department></app-department>
-<app-role></app-role>
+<app-layout></app-layout>
